--- a/templates/css/video_player.less
+++ b/templates/css/video_player.less
@@ -33,7 +33,9 @@
   margin: 4px;
 }
 
-#mep_0 {
+div#mep_0 {
+  max-height: @video-height;
+  width: 100%;
   right: -2px;
   margin: -2px;
 }
